feat: add new pages and services for trading platform
- Add Login page with Google OAuth integration
- Add Pricing page with subscription management
- Add LogoPreview page for logo options
- Add TokensPage for AI token purchases
- Add MarketHub with live NSE data, FII/DII tracking, sector analysis
- Add ScannerHub improvements with data normalization
- Add SignalsHub with stock and options signals
- Add TradeAdvisor API integration
- Add UserProfile with subscription status
- Add adminService for user and transaction management
- Add tokenService for token balance and recharge
- Improve DataFetcher with local dev detection
- Update all services with payment and subscription support

--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -8,7 +8,25 @@
     ],
     "headers": [
       {
-        "source": "/static/**",
+        "source": "/sw.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "/static/js/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "/static/css/**",
         "headers": [
           {
             "key": "Cache-Control",
