--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,6 +43,10 @@ beautifulsoup4==4.14.3
 websockets>=12.0
 # Dhan API
 dhanhq>=2.0.0
+pyotp>=2.9.0
 
 # Rate Limiting
 ratelimit>=2.2.1
+
+# AI/ML
+anthropic>=0.18.0
