--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,9 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
     "react-grid-layout": "^2.2.2",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.2",
+    "react-is": "^19.2.4",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.12.0",
