fix: agent loop deadlock + Cloud Run keep-alive + async yfinance
- Wrap all yfinance sync calls in asyncio.to_thread() to prevent event loop deadlock
- Add keepalive self-pinger (4min interval) to prevent Cloud Run instance freeze
- Add explicit event logging for rule-based fallback
- Update env.yaml with GOOGLE_CLOUD_PROJECT
- Fix indentation in agent loop (broken by previous edit)

--- a/backend/env.yaml
+++ b/backend/env.yaml
@@ -10,6 +10,12 @@ CORS_ORIGINS: "https://moneysaarthi-3bf1c.web.app,https://moneysaarthi-3bf1c.fir
 # Admin Configuration
 SUPER_ADMIN_EMAIL: "maaktanwar@gmail.com"
 
+# Google Cloud Project
+GOOGLE_CLOUD_PROJECT: "moneysaarthi"
+
+# Anthropic API Key (add when available)
+# ANTHROPIC_API_KEY: "sk-ant-..."
+
 # Security Note: Sensitive credentials should be set via:
 # - Google Cloud Secret Manager
 # - gcloud run services update --set-secrets
